Fix solutions spacing

--- a/main.css
+++ b/main.css
@@ -17,6 +17,7 @@ body {
   margin: 0;
   overflow-x: hidden;
   padding: 0;
+  width: 100vw;
 }
 
 a {
